--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         /* Base font size for the entire document, relative to which all 'rem' units will scale */
         html {
-            font-size: 14px; /* تم زيادة الحجم حسب الطلب */
+            font-size: 16px; /* تم زيادة الحجم حسب الطلب ليكون أكثر وضوحًا على شاشات الهاتف */
         }
 
         body {
@@ -17,7 +17,7 @@
             background-color: #F8F9FA; /* Page Background */
             color: #3A3A3A; /* Darker text for better readability */
             line-height: 1.6;
-            font-size: 0.9rem; /* A smaller, more mobile-friendly font size */
+            font-size: 1rem; /* A more readable font size */
             transition: font-size 0.2s ease-in-out;
         }
 
@@ -37,12 +37,12 @@
             justify-content: space-between;
         }
         .header-bg h1 {
-            font-size: 1.1rem; /* تم تعديل حجم الخط */
+            font-size: 1.25rem; /* تم تعديل حجم الخط */
             font-weight: 700;
         }
 
         .main-container {
-            padding-top: 3.5rem; /* Add padding to prevent content from being hidden by the fixed header */
+            padding-top: 4rem; /* Add padding to prevent content from being hidden by the fixed header */
             padding-bottom: 1.5rem;
         }
 
@@ -54,8 +54,8 @@
         }
 
         .hamburger-menu svg {
-            width: 20px; /* تم تعديل الحجم */
-            height: 20px;
+            width: 24px; /* تم تعديل الحجم */
+            height: 24px;
         }
 
         /* Sidebar styles */
@@ -95,7 +95,7 @@
 
         .sidebar-header {
             padding: 0.75rem; /* تم تعديل المساحة */
-            font-size: 1rem; /* تم تعديل حجم الخط */
+            font-size: 1.1rem; /* تم تعديل حجم الخط */
             font-weight: bold;
             border-bottom: 1px solid #e0e0e0;
             margin-bottom: 0.5rem;
@@ -105,8 +105,8 @@
         .sidebar-nav-item {
             display: flex;
             align-items: center;
-            padding: 0.75rem 1rem; /* تم تكبير المساحة */
-            font-size: 1rem; /* تم تكبير حجم الخط */
+            padding: 0.85rem 1rem; /* تم تكبير المساحة */
+            font-size: 1.1rem; /* تم تكبير حجم الخط */
             color: #4A5568;
             transition: background-color 0.2s ease, color 0.2s ease;
             cursor: pointer;
@@ -120,10 +120,10 @@
         /* General quiz card and button styles */
         .card {
             background-color: #FFFFFF;
-            border-radius: 0.6rem;
+            border-radius: 0.75rem;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
-            margin-bottom: 1.5rem; /* تم تعديل المساحة */
-            padding: 1.25rem; /* تم تعديل المساحة */
+            margin-bottom: 1.75rem; /* تم تعديل المساحة */
+            padding: 1.5rem; /* تم تعديل المساحة */
             border: 1px solid #E0E0E0;
             transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
         }
@@ -132,25 +132,25 @@
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
         .question-text {
-            font-size: 1rem; /* تم تعديل حجم الخط */
+            font-size: 1.1rem; /* تم تعديل حجم الخط */
             font-weight: 700;
             color: #424242;
-            margin-bottom: 1rem; /* تم تعديل المساحة */
+            margin-bottom: 1.25rem; /* تم تعديل المساحة */
             line-height: 1.6;
         }
         .action-button {
             background-color: #007BFF;
             color: white;
-            padding: 0.6rem 1.25rem; /* تم تعديل المساحة */
-            border-radius: 0.4rem;
+            padding: 0.75rem 1.5rem; /* تم تعديل المساحة */
+            border-radius: 0.5rem;
             cursor: pointer;
             transition: background-color 0.3s ease, transform 0.2s ease;
-            margin-top: 1.25rem; /* تم تعديل المساحة */
+            margin-top: 1.5rem; /* تم تعديل المساحة */
             font-weight: 600;
             box-shadow: 0 3px 6px rgba(0, 123, 255, 0.2);
             display: inline-block;
-            margin-left: 0.4rem; /* تم تعديل المساحة */
-            margin-right: 0.4rem; /* تم تعديل المساحة */
+            margin-left: 0.5rem; /* تم تعديل المساحة */
+            margin-right: 0.5rem; /* تم تعديل المساحة */
         }
         .action-button:hover {
             background-color: #0056b3;
@@ -160,18 +160,18 @@
         .answer-text {
             color: #28A745;
             font-weight: 700;
-            margin-top: 0.75rem; /* تم تعديل المساحة */
+            margin-top: 1rem; /* تم تعديل المساحة */
             display: none;
-            font-size: 1rem; /* تم تعديل حجم الخط */
+            font-size: 1.1rem; /* تم تعديل حجم الخط */
         }
         .mcq-option {
             display: flex;
             align-items: center;
-            margin-bottom: 0.75rem; /* تم تعديل المساحة */
+            margin-bottom: 0.9rem; /* تم تعديل المساحة */
             cursor: pointer;
             position: relative;
-            padding: 0.6rem 0.85rem; /* تم تعديل المساحة */
-            border-radius: 0.3rem;
+            padding: 0.75rem 1rem; /* تم تعديل المساحة */
+            border-radius: 0.4rem;
             transition: background-color 0.2s ease, box-shadow 0.2s ease, transform 0.1s ease-out;
             box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
             border: 1px solid #E0E0E0;
@@ -209,10 +209,10 @@
         .mcq-option label {
             display: flex;
             align-items: center;
-            font-size: 0.85rem; /* تم تعديل حجم الخط */
+            font-size: 1rem; /* تم تعديل حجم الخط */
             color: #333;
             line-height: 1.5;
-            padding-left: 1.75rem; /* تم تعديل المساحة */
+            padding-left: 2rem; /* تم تعديل المساحة */
             flex-grow: 1;
             position: relative;
             cursor: pointer;
@@ -225,8 +225,8 @@
             left: 0.25rem;
             top: 50%;
             transform: translateY(-50%);
-            height: 1.25rem; /* تم تعديل الحجم */
-            width: 1.25rem; /* تم تعديل الحجم */
+            height: 1.5rem; /* تم تعديل الحجم */
+            width: 1.5rem; /* تم تعديل الحجم */
             border: 2px solid #007BFF;
             border-radius: 50%;
             background: #fff;
@@ -237,11 +237,11 @@
         .mcq-option label::after {
             content: '';
             position: absolute;
-            left: 0.55rem; /* تم تعديل المساحة */
+            left: 0.65rem; /* تم تعديل المساحة */
             top: 50%;
             transform: translateY(-50%);
-            height: 0.6rem; /* تم تعديل الحجم */
-            width: 0.6rem; /* تم تعديل الحجم */
+            height: 0.8rem; /* تم تعديل الحجم */
+            width: 0.8rem; /* تم تعديل الحجم */
             border-radius: 50%;
             background: #007BFF;
             opacity: 0;
@@ -259,17 +259,17 @@
             border-color: #0056b3;
         }
         .score-display {
-            margin-top: 1.25rem; /* تم تعديل المساحة */
+            margin-top: 1.5rem; /* تم تعديل المساحة */
             font-weight: 700;
             color: #3A3A3A;
-            font-size: 1.5rem; /* تم تعديل حجم الخط */
+            font-size: 1.6rem; /* تم تعديل حجم الخط */
             text-align: center;
         }
         .final-score-message {
-            font-size: 2rem; /* تم تعديل حجم الخط */
+            font-size: 2.2rem; /* تم تعديل حجم الخط */
             font-weight: 800;
             color: #007BFF;
-            margin-top: 1.5rem; /* تم تعديل المساحة */
+            margin-top: 1.75rem; /* تم تعديل المساحة */
             text-align: center;
             text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
         }
@@ -280,8 +280,8 @@
             color: #DC3545;
         }
         .question-feedback {
-            font-size: 0.9rem; /* تم تعديل حجم الخط */
-            margin-top: 0.6rem; /* تم تعديل المساحة */
+            font-size: 1rem; /* تم تعديل حجم الخط */
+            margin-top: 0.75rem; /* تم تعديل المساحة */
             font-weight: 600;
         }
         .option-correct-highlight {
@@ -310,33 +310,33 @@
         }
         .fab-container {
             position: fixed;
-            bottom: 0.5rem; /* تم تعديل المساحة */
-            right: 0.5rem; /* تم تعديل المساحة */
+            bottom: 1rem; /* تم تعديل المساحة */
+            right: 1rem; /* تم تعديل المساحة */
             display: flex;
             flex-direction: column-reverse;
-            gap: 0.4rem;
+            gap: 0.5rem;
             z-index: 1000;
         }
         .fab-button {
             background-color: #007BFF;
             color: white;
-            padding: 0.5rem; /* تم تعديل المساحة */
+            padding: 0.6rem; /* تم تعديل المساحة */
             border-radius: 9999px;
             box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
             transition: background-color 0.3s ease, transform 0.2s ease;
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 40px; /* تم تعديل الحجم */
-            height: 40px; /* تم تعديل الحجم */
+            width: 44px; /* تم تعديل الحجم */
+            height: 44px; /* تم تعديل الحجم */
         }
         .fab-button:hover {
             background-color: #0056b3;
             transform: translateY(-1.5px);
         }
         .fab-button svg {
-            width: 18px; /* تم تعديل الحجم */
-            height: 18px; /* تم تعديل الحجم */
+            width: 20px; /* تم تعديل الحجم */
+            height: 20px; /* تم تعديل الحجم */
         }
         .scroll-to-top-fab {
             background-color: #28A745;
@@ -472,8 +472,8 @@
             font-weight: bold;
             cursor: pointer;
             transition: transform 0.2s ease;
-            width: 32px; /* تم تكبير الأبعاد */
-            height: 32px; /* تم تكبير الأبعاد */
+            width: 36px; /* تم تكبير الأبعاد */
+            height: 36px; /* تم تكبير الأبعاد */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -488,8 +488,8 @@
         .toggle-switch {
             position: relative;
             display: inline-block;
-            width: 40px; /* تم تكبير الأبعاد */
-            height: 24px; /* تم تكبير الأبعاد */
+            width: 44px; /* تم تكبير الأبعاد */
+            height: 26px; /* تم تكبير الأبعاد */
             margin: 0;
         }
         .toggle-switch input {
@@ -511,8 +511,8 @@
         .toggle-slider:before {
             position: absolute;
             content: "";
-            height: 20px; /* تم تكبير الدائرة الداخلية */
-            width: 20px; /* تم تكبير الدائرة الداخلية */
+            height: 22px; /* تم تكبير الدائرة الداخلية */
+            width: 22px; /* تم تكبير الدائرة الداخلية */
             left: 2px;
             bottom: 2px;
             background-color: white;
@@ -523,7 +523,7 @@
             background-color: #2196F3;
         }
         input:checked + .toggle-slider:before {
-            transform: translateX(16px); /* تم تعديل مسافة التحريك */
+            transform: translateX(18px); /* تم تعديل مسافة التحريك */
         }
         .dark-mode .toggle-slider {
             background-color: #4A5568;
@@ -537,7 +537,7 @@
         
         @media (max-width: 768px) {
             .header-bg h1 {
-                font-size: 1rem; /* تم تعديل الحجم */
+                font-size: 1.1rem; /* تم تعديل الحجم */
             }
         }
     </style>
@@ -546,7 +546,7 @@
 
     <header class="header-bg text-white p-4 shadow-md">
         <div class="hamburger-menu" id="hamburger-menu">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
             </svg>
         </div>
